--- a/package.json
+++ b/package.json
@@ -20,20 +20,37 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@nestjs/common": "9.0.7",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "9.0.7",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "9.0.7",
+    "@nestjs/typeorm": "^9.0.0",
+    "@types/hapi__joi": "^17.1.8",
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.7.3",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
-    "rxjs": "7.5.6"
+    "rxjs": "7.5.6",
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
     "@nestjs/cli": "9.0.0",
     "@nestjs/schematics": "9.0.1",
     "@nestjs/testing": "9.0.7",
-    "@types/express": "4.17.13",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/express": "^4.17.13",
     "@types/jest": "28.1.6",
     "@types/node": "18.0.3",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.31.0",
     "@typescript-eslint/parser": "5.31.0",
