--- a/.github/workflows/iv.yml
+++ b/.github/workflows/iv.yml
@@ -40,7 +40,7 @@ jobs:
           parallel: true
 
   finish:
-    needs: test
+    needs: [test]
     runs-on: ubuntu-latest
     steps:
       - name: Coveralls Finished
