--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "@nestjs/config": "2.2.0",
     "@nestjs/core": "9.0.7",
     "@nestjs/jwt": "9.0.0",
+    "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "9.0.0",
     "@nestjs/platform-express": "9.0.7",
     "@nestjs/typeorm": "9.0.0",
     "@types/hapi__joi": "17.1.8",
     "bcrypt": "5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cookie-parser": "1.4.6",
+    "mongoose": "^6.5.0",
     "passport": "0.6.0",
     "passport-jwt": "4.0.0",
     "passport-local": "1.0.0",
