chore(package.json): update version

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint --fix",
     "prettier:fix": "prettier --write --config .prettierrc.js",
     "deploy:prod": "npm run build && pm2 start ecosystem.config.js --only prod",
@@ -65,7 +66,7 @@
     "@types/prettyjson": "0.0.29",
     "@types/uuid": "8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
+    "@typescript-eslint/parser": "^5.32.0",
     "cross-env": "^7.0.3",
     "deep-equal": "^2.0.5",
     "env-cmd": "^10.1.0",
