feat: use nestjs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nest-typescript-starter",
+  "name": "35middle-server",
   "private": true,
   "version": "1.0.0",
   "description": "Nest TypeScript starter repository",
@@ -27,14 +27,18 @@
     "@nestjs/jwt": "9.0.0",
     "@nestjs/passport": "9.0.0",
     "@nestjs/platform-express": "9.0.7",
+    "@nestjs/swagger": "^6.0.5",
     "@nestjs/typeorm": "9.0.0",
     "@types/hapi__joi": "17.1.8",
     "bcrypt": "5.0.1",
     "cookie-parser": "1.4.6",
+    "nestjs-pino": "^3.1.1",
     "passport": "0.6.0",
     "passport-jwt": "4.0.0",
     "passport-local": "1.0.0",
     "pg": "8.7.3",
+    "pino-http": "^8.2.0",
+    "pino-pretty": "^9.0.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.6",
