--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@nestjs/swagger": "6.0.5",
     "@nestjs/typeorm": "9.0.0",
     "@types/hapi__joi": "17.1.8",
-    "bcrypt": "5.0.1",
+    "bcrypt": "^5.0.1",
+    "class-validator": "^0.13.2",
     "cookie-parser": "1.4.6",
     "nestjs-pino": "3.1.1",
     "passport": "0.6.0",
@@ -41,13 +42,13 @@
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.6",
-    "typeorm": "0.3.7"
+    "typeorm": "^0.3.10"
   },
   "devDependencies": {
-    "@nestjs/cli": "9.0.0",
+    "@nestjs/cli": "^9.1.3",
     "@nestjs/schematics": "9.0.1",
     "@nestjs/testing": "9.0.11",
-    "@types/bcrypt": "5.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "1.4.3",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.6",
