--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.6",
-    "typeorm": "^0.3.10"
+    "typeorm": "^0.3.10",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.1.3",
     "@nestjs/schematics": "9.0.1",
-    "@nestjs/testing": "9.0.11",
+    "@nestjs/testing": "^9.1.1",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "1.4.3",
     "@types/express": "4.17.13",
@@ -64,7 +65,7 @@
     "eslint": "8.22.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
-    "jest": "28.1.3",
+    "jest": "^29.0.3",
     "prettier": "2.7.1",
     "source-map-support": "0.5.21",
     "supertest": "6.2.4",
