--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/config": "2.2.0",
     "@nestjs/core": "9.0.11",
     "@nestjs/jwt": "9.0.0",
+    "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "9.0.0",
     "@nestjs/platform-express": "9.0.11",
     "@nestjs/swagger": "6.0.5",
@@ -31,6 +32,7 @@
     "@types/hapi__joi": "17.1.8",
     "bcrypt": "5.0.1",
     "cookie-parser": "1.4.6",
+    "mongoose": "^6.6.1",
     "nestjs-pino": "3.1.1",
     "passport": "0.6.0",
     "passport-jwt": "4.0.0",
