--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "9.0.0",
     "@nestjs/platform-express": "9.0.11",
     "@nestjs/swagger": "6.0.5",
+    "@nestjs/terminus": "^9.1.2",
     "@nestjs/typeorm": "9.0.0",
     "@types/hapi__joi": "17.1.8",
     "bcrypt": "5.0.1",
