--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/typeorm": "9.0.0",
     "@types/hapi__joi": "17.1.8",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "1.4.6",
     "mongoose": "^6.6.1",
@@ -45,10 +46,10 @@
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.6",
-    "typeorm": "^0.3.10",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "@nestjs/cli": "^9.1.3",
     "@nestjs/schematics": "9.0.1",
     "@nestjs/testing": "^9.1.1",
