--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@nestjs/core": "9.0.11",
     "@nestjs/jwt": "9.0.0",
     "@nestjs/mongoose": "^9.2.0",
-    "@nestjs/passport": "9.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "9.0.11",
     "@nestjs/swagger": "6.0.5",
     "@nestjs/terminus": "^9.1.2",
