--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "cookie-parser": "1.4.6",
     "mongoose": "^6.6.1",
     "nestjs-pino": "3.1.1",
-    "passport": "0.6.0",
+    "passport": "^0.6.0",
     "passport-jwt": "4.0.0",
-    "passport-local": "1.0.0",
+    "passport-local": "^1.0.0",
     "pg": "8.7.3",
     "pino-http": "8.2.0",
     "pino-pretty": "9.0.1",
@@ -59,7 +59,7 @@
     "@types/express": "4.17.13",
     "@types/jest": "28.1.6",
     "@types/node": "18.0.3",
-    "@types/passport-jwt": "3.0.6",
+    "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "1.0.34",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.32.0",
