--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.6",
+    "ts-mockito": "^2.6.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
