--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@nestjs/common": "9.0.11",
     "@nestjs/config": "2.2.0",
     "@nestjs/core": "9.0.11",
-    "@nestjs/jwt": "9.0.0",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "9.0.11",
@@ -41,7 +41,7 @@
     "mongoose": "^6.6.1",
     "nestjs-pino": "3.1.1",
     "passport": "^0.6.0",
-    "passport-jwt": "4.0.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "8.7.3",
     "pino-http": "8.2.0",
