--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-sns": "^3.190.0",
+    "@aws-sdk/credential-providers": "^3.190.0",
     "@hapi/joi": "17.1.1",
     "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "9.0.11",
