--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cookie-parser": "1.4.6",
     "mongoose": "^6.6.1",
     "nestjs-pino": "3.1.1",
+    "next-http-proxy-middleware": "^1.2.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -50,7 +51,8 @@
     "rimraf": "3.0.2",
     "rxjs": "7.5.6",
     "ts-mockito": "^2.6.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
@@ -61,6 +63,7 @@
     "@types/cookie-parser": "1.4.3",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.6",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.0.3",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "1.0.34",
