--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/terminus": "^9.1.2",
     "@nestjs/typeorm": "9.0.0",
     "@types/hapi__joi": "17.1.8",
+    "@types/multer": "^1.4.7",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
