--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "1.4.6",
+    "fluent-ffmpeg": "^2.1.2",
+    "get-video-duration": "^4.1.0",
     "mongoose": "^6.6.1",
     "nestjs-pino": "3.1.1",
     "next-http-proxy-middleware": "^1.2.5",
