--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/typeorm": "9.0.0",
     "@types/hapi__joi": "17.1.8",
     "@types/multer": "^1.4.7",
+    "aws-sdk": "^2.1264.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
